Date is now displayed.

--- a/Project/TravelDiary/Scripts/app/directives/diary-entry-text.html
+++ b/Project/TravelDiary/Scripts/app/directives/diary-entry-text.html
@@ -1,2 +1,2 @@
-﻿<h1>{{title}}</h1>
-<p ng-bind-html="content"></p>
+﻿<h1>{{entry.title}} <small>{{entry.date | date}}</small></h1>
+<p ng-bind-html="entry.content"></p>
